Trabalho Final Etapa5/parser.output
Terminals unused in grammar

   TOKEN_ERROR


Grammar

    0 $accept: START $end

    1 START: PROG

    2 PROG: DECLARATION PROG
    3     | FUNC_DECLARATION PROG
    4     | /* empty */

    5 LIST: LITERAL LIST
    6     | /* empty */

    7 TYPE: KW_BOOL
    8     | KW_WORD
    9     | KW_BYTE

   10 IDENTIFIER: TK_IDENTIFIER

   11 LITERAL: LIT_INTEGER
   12        | LIT_FALSE
   13        | LIT_TRUE
   14        | LIT_STRING
   15        | LIT_CHAR

   16 DECLARATION: TYPE IDENTIFIER ':' LITERAL ';'
   17            | TYPE '$' IDENTIFIER ':' LITERAL ';'
   18            | TYPE IDENTIFIER '[' EXPRESSION ']' ':' LIST ';'
   19            | TYPE IDENTIFIER '[' EXPRESSION ']' ';'

   20 DECLARATION_WO_VEC: TYPE IDENTIFIER ':' LITERAL ';' DECLARATION_WO_VEC
   21                   | TYPE '$' IDENTIFIER ':' LITERAL ';' DECLARATION_WO_VEC
   22                   | /* empty */

   23 FUNC_DECLARATION: TYPE IDENTIFIER '(' ARGUMENTS ')' DECLARATION_WO_VEC BLOCK
   24                 | TYPE IDENTIFIER '(' ')' DECLARATION_WO_VEC BLOCK

   25 ARGUMENTS: TYPE IDENTIFIER
   26          | TYPE IDENTIFIER ',' ARGUMENTS

   27 ARGUMENTS_CALL: EXPRESSION
   28               | EXPRESSION ',' ARGUMENTS_CALL
   29               | /* empty */

   30 EXPRESSION: IDENTIFIER
   31           | IDENTIFIER '[' EXPRESSION ']'
   32           | '&' IDENTIFIER
   33           | '*' IDENTIFIER
   34           | LITERAL
   35           | '(' EXPRESSION ')'
   36           | EXPRESSION '*' EXPRESSION
   37           | EXPRESSION '+' EXPRESSION
   38           | EXPRESSION '/' EXPRESSION
   39           | EXPRESSION '-' EXPRESSION
   40           | IDENTIFIER '(' ARGUMENTS_CALL ')'
   41           | EXPRESSION OPERATOR_OR EXPRESSION
   42           | EXPRESSION OPERATOR_AND EXPRESSION
   43           | EXPRESSION OPERATOR_LE EXPRESSION
   44           | EXPRESSION OPERATOR_GE EXPRESSION
   45           | EXPRESSION OPERATOR_EQ EXPRESSION
   46           | EXPRESSION OPERATOR_NE EXPRESSION
   47           | EXPRESSION '<' EXPRESSION
   48           | EXPRESSION '>' EXPRESSION

   49 BLOCK: '{' CMD_SEQ '}'

   50 OUTPUT: EXPRESSION
   51       | EXPRESSION ',' OUTPUT

   52 CMD: IDENTIFIER '=' EXPRESSION
   53    | IDENTIFIER '[' EXPRESSION ']' '=' EXPRESSION
   54    | '*' IDENTIFIER '=' EXPRESSION
   55    | KW_INPUT IDENTIFIER
   56    | KW_OUTPUT OUTPUT
   57    | KW_RETURN EXPRESSION
   58    | BLOCK
   59    | KW_IF '(' EXPRESSION ')' KW_THEN CMD
   60    | KW_IF '(' EXPRESSION ')' KW_THEN CMD KW_ELSE CMD
   61    | KW_LOOP '(' EXPRESSION ')' CMD

   62 CMD_SEQ: CMD ';' CMD_SEQ
   63        | /* empty */


Terminals, with rules where they appear

$end (0) 0
'$' (36) 17 21
'&' (38) 32
'(' (40) 23 24 35 40 59 60 61
')' (41) 23 24 35 40 59 60 61
'*' (42) 33 36 54
'+' (43) 37
',' (44) 26 28 51
'-' (45) 39
'/' (47) 38
':' (58) 16 17 18 20 21
';' (59) 16 17 18 19 20 21 62
'<' (60) 47
'=' (61) 52 53 54
'>' (62) 48
'[' (91) 18 19 31 53
']' (93) 18 19 31 53
'{' (123) 49
'}' (125) 49
error (256)
KW_WORD (258) 8
KW_BOOL (259) 7
KW_BYTE (260) 9
KW_IF (261) 59 60
KW_THEN (262) 59 60
KW_ELSE (263) 60
KW_LOOP (264) 61
KW_INPUT (265) 55
KW_RETURN (266) 57
KW_OUTPUT (267) 56
OPERATOR_LE (268) 43
OPERATOR_GE (269) 44
OPERATOR_EQ (270) 45
OPERATOR_NE (271) 46
OPERATOR_AND (272) 42
OPERATOR_OR (273) 41
TK_IDENTIFIER (274) 10
LIT_INTEGER (275) 11
LIT_FALSE (276) 12
LIT_TRUE (277) 13
LIT_CHAR (278) 15
LIT_STRING (279) 14
TOKEN_ERROR (280)
IFX (281)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
START (46)
    on left: 1, on right: 0
PROG (47)
    on left: 2 3 4, on right: 1 2 3
LIST (48)
    on left: 5 6, on right: 5 18
TYPE (49)
    on left: 7 8 9, on right: 16 17 18 19 20 21 23 24 25 26
IDENTIFIER (50)
    on left: 10, on right: 16 17 18 19 20 21 23 24 25 26 30 31 32 33
    40 52 53 54 55
LITERAL (51)
    on left: 11 12 13 14 15, on right: 5 16 17 20 21 34
DECLARATION (52)
    on left: 16 17 18 19, on right: 2
DECLARATION_WO_VEC (53)
    on left: 20 21 22, on right: 20 21 23 24
FUNC_DECLARATION (54)
    on left: 23 24, on right: 3
ARGUMENTS (55)
    on left: 25 26, on right: 23 26
ARGUMENTS_CALL (56)
    on left: 27 28 29, on right: 28 40
EXPRESSION (57)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48, on right: 18 19 27 28 31 35 36 37 38 39 41 42 43 44 45 46 47
    48 50 51 52 53 54 57 59 60 61
BLOCK (58)
    on left: 49, on right: 23 24 58
OUTPUT (59)
    on left: 50 51, on right: 51 56
CMD (60)
    on left: 52 53 54 55 56 57 58 59 60 61, on right: 59 60 61 62
CMD_SEQ (61)
    on left: 62 63, on right: 49 62


state 0

    0 $accept: . START $end

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    $default  reduce using rule 4 (PROG)

    START             go to state 4
    PROG              go to state 5
    TYPE              go to state 6
    DECLARATION       go to state 7
    FUNC_DECLARATION  go to state 8


state 1

    8 TYPE: KW_WORD .

    $default  reduce using rule 8 (TYPE)


state 2

    7 TYPE: KW_BOOL .

    $default  reduce using rule 7 (TYPE)


state 3

    9 TYPE: KW_BYTE .

    $default  reduce using rule 9 (TYPE)


state 4

    0 $accept: START . $end

    $end  shift, and go to state 9


state 5

    1 START: PROG .

    $default  reduce using rule 1 (START)


state 6

   16 DECLARATION: TYPE . IDENTIFIER ':' LITERAL ';'
   17            | TYPE . '$' IDENTIFIER ':' LITERAL ';'
   18            | TYPE . IDENTIFIER '[' EXPRESSION ']' ':' LIST ';'
   19            | TYPE . IDENTIFIER '[' EXPRESSION ']' ';'
   23 FUNC_DECLARATION: TYPE . IDENTIFIER '(' ARGUMENTS ')' DECLARATION_WO_VEC BLOCK
   24                 | TYPE . IDENTIFIER '(' ')' DECLARATION_WO_VEC BLOCK

    TK_IDENTIFIER  shift, and go to state 10
    '$'            shift, and go to state 11

    IDENTIFIER  go to state 12


state 7

    2 PROG: DECLARATION . PROG

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    $default  reduce using rule 4 (PROG)

    PROG              go to state 13
    TYPE              go to state 6
    DECLARATION       go to state 7
    FUNC_DECLARATION  go to state 8


state 8

    3 PROG: FUNC_DECLARATION . PROG

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    $default  reduce using rule 4 (PROG)

    PROG              go to state 14
    TYPE              go to state 6
    DECLARATION       go to state 7
    FUNC_DECLARATION  go to state 8


state 9

    0 $accept: START $end .

    $default  accept


state 10

   10 IDENTIFIER: TK_IDENTIFIER .

    $default  reduce using rule 10 (IDENTIFIER)


state 11

   17 DECLARATION: TYPE '$' . IDENTIFIER ':' LITERAL ';'

    TK_IDENTIFIER  shift, and go to state 10

    IDENTIFIER  go to state 15


state 12

   16 DECLARATION: TYPE IDENTIFIER . ':' LITERAL ';'
   18            | TYPE IDENTIFIER . '[' EXPRESSION ']' ':' LIST ';'
   19            | TYPE IDENTIFIER . '[' EXPRESSION ']' ';'
   23 FUNC_DECLARATION: TYPE IDENTIFIER . '(' ARGUMENTS ')' DECLARATION_WO_VEC BLOCK
   24                 | TYPE IDENTIFIER . '(' ')' DECLARATION_WO_VEC BLOCK

    ':'  shift, and go to state 16
    '['  shift, and go to state 17
    '('  shift, and go to state 18


state 13

    2 PROG: DECLARATION PROG .

    $default  reduce using rule 2 (PROG)


state 14

    3 PROG: FUNC_DECLARATION PROG .

    $default  reduce using rule 3 (PROG)


state 15

   17 DECLARATION: TYPE '$' IDENTIFIER . ':' LITERAL ';'

    ':'  shift, and go to state 19


state 16

   16 DECLARATION: TYPE IDENTIFIER ':' . LITERAL ';'

    LIT_INTEGER  shift, and go to state 20
    LIT_FALSE    shift, and go to state 21
    LIT_TRUE     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23
    LIT_STRING   shift, and go to state 24

    LITERAL  go to state 25


state 17

   18 DECLARATION: TYPE IDENTIFIER '[' . EXPRESSION ']' ':' LIST ';'
   19            | TYPE IDENTIFIER '[' . EXPRESSION ']' ';'

    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 20
    LIT_FALSE      shift, and go to state 21
    LIT_TRUE       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    '*'            shift, and go to state 26
    '('            shift, and go to state 27
    '&'            shift, and go to state 28

    IDENTIFIER  go to state 29
    LITERAL     go to state 30
    EXPRESSION  go to state 31


state 18

   23 FUNC_DECLARATION: TYPE IDENTIFIER '(' . ARGUMENTS ')' DECLARATION_WO_VEC BLOCK
   24                 | TYPE IDENTIFIER '(' . ')' DECLARATION_WO_VEC BLOCK

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3
    ')'      shift, and go to state 32

    TYPE       go to state 33
    ARGUMENTS  go to state 34


state 19

   17 DECLARATION: TYPE '$' IDENTIFIER ':' . LITERAL ';'

    LIT_INTEGER  shift, and go to state 20
    LIT_FALSE    shift, and go to state 21
    LIT_TRUE     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23
    LIT_STRING   shift, and go to state 24

    LITERAL  go to state 35


state 20

   11 LITERAL: LIT_INTEGER .

    $default  reduce using rule 11 (LITERAL)


state 21

   12 LITERAL: LIT_FALSE .

    $default  reduce using rule 12 (LITERAL)


state 22

   13 LITERAL: LIT_TRUE .

    $default  reduce using rule 13 (LITERAL)


state 23

   15 LITERAL: LIT_CHAR .

    $default  reduce using rule 15 (LITERAL)


state 24

   14 LITERAL: LIT_STRING .

    $default  reduce using rule 14 (LITERAL)


state 25

   16 DECLARATION: TYPE IDENTIFIER ':' LITERAL . ';'

    ';'  shift, and go to state 36


state 26

   33 EXPRESSION: '*' . IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 10

    IDENTIFIER  go to state 37


state 27

   35 EXPRESSION: '(' . EXPRESSION ')'

    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 20
    LIT_FALSE      shift, and go to state 21
    LIT_TRUE       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    '*'            shift, and go to state 26
    '('            shift, and go to state 27
    '&'            shift, and go to state 28

    IDENTIFIER  go to state 29
    LITERAL     go to state 30
    EXPRESSION  go to state 38


state 28

   32 EXPRESSION: '&' . IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 10

    IDENTIFIER  go to state 39


state 29

   30 EXPRESSION: IDENTIFIER .
   31           | IDENTIFIER . '[' EXPRESSION ']'
   40           | IDENTIFIER . '(' ARGUMENTS_CALL ')'

    '['  shift, and go to state 40
    '('  shift, and go to state 41

    $default  reduce using rule 30 (EXPRESSION)


state 30

   34 EXPRESSION: LITERAL .

    $default  reduce using rule 34 (EXPRESSION)


state 31

   18 DECLARATION: TYPE IDENTIFIER '[' EXPRESSION . ']' ':' LIST ';'
   19            | TYPE IDENTIFIER '[' EXPRESSION . ']' ';'
   36 EXPRESSION: EXPRESSION . '*' EXPRESSION
   37           | EXPRESSION . '+' EXPRESSION
   38           | EXPRESSION . '/' EXPRESSION
   39           | EXPRESSION . '-' EXPRESSION
   41           | EXPRESSION . OPERATOR_OR EXPRESSION
   42           | EXPRESSION . OPERATOR_AND EXPRESSION
   43           | EXPRESSION . OPERATOR_LE EXPRESSION
   44           | EXPRESSION . OPERATOR_GE EXPRESSION
   45           | EXPRESSION . OPERATOR_EQ EXPRESSION
   46           | EXPRESSION . OPERATOR_NE EXPRESSION
   47           | EXPRESSION . '<' EXPRESSION
   48           | EXPRESSION . '>' EXPRESSION

    OPERATOR_LE   shift, and go to state 42
    OPERATOR_GE   shift, and go to state 43
    OPERATOR_EQ   shift, and go to state 44
    OPERATOR_NE   shift, and go to state 45
    OPERATOR_AND  shift, and go to state 46
    OPERATOR_OR   shift, and go to state 47
    '<'           shift, and go to state 48
    '>'           shift, and go to state 49
    '+'           shift, and go to state 50
    '-'           shift, and go to state 51
    '*'           shift, and go to state 52
    '/'           shift, and go to state 53
    ']'           shift, and go to state 54


state 32

   24 FUNC_DECLARATION: TYPE IDENTIFIER '(' ')' . DECLARATION_WO_VEC BLOCK

    KW_WORD  shift, and go to state 1
    KW_BOOL  shift, and go to state 2
    KW_BYTE  shift, and go to state 3

    $default  reduce using rule 22 (DECLARATION_WO_VEC)

    TYPE                go to state 55
    DECLARATION_WO_VEC  go to state 56


state 33

   25 ARGUMENTS: TYPE . IDENTIFIER
   26          | TYPE . IDENTIFIER ',' ARGUMENTS

    TK_IDENTIFIER  shift, and go to state 10

    IDENTIFIER  go to state 57


state 34

   23 FUNC_DECLARATION: TYPE IDENTIFIER '(' ARGUMENTS . ')' DECLARATION_WO_VEC BLOCK

    ')'  shift, and go to state 58


state 35

   17 DECLARATION: TYPE '$' IDENTIFIER ':' LITERAL . ';'

    ';'  shift, and go to state 59


state 36

   16 DECLARATION: TYPE IDENTIFIER ':' LITERAL ';' .

    $default  reduce using rule 16 (DECLARATION)


state 37

   33 EXPRESSION: '*' IDENTIFIER .

    $default  reduce using rule 33 (EXPRESSION)


state 38

   35 EXPRESSION: '(' EXPRESSION . ')'
   36           | EXPRESSION . '*' EXPRESSION
   37           | EXPRESSION . '+' EXPRESSION
   38           | EXPRESSION . '/' EXPRESSION
   39           | EXPRESSION . '-' EXPRESSION
   41           | EXPRESSION . OPERATOR_OR EXPRESSION
   42           | EXPRESSION . OPERATOR_AND EXPRESSION
   43           | EXPRESSION . OPERATOR_LE EXPRESSION
   44           | EXPRESSION . OPERATOR_GE EXPRESSION
   45           | EXPRESSION . OPERATOR_EQ EXPRESSION
   46           | EXPRESSION . OPERATOR_NE EXPRESSION
   47           | EXPRESSION . '<' EXPRESSION
   48           | EXPRESSION . '>' EXPRESSION

    OPERATOR_LE   shift, and go to state 42
    OPERATOR_GE   shift, and go to state 43
    OPERATOR_EQ   shift, and go to state 44
    OPERATOR_NE   shift, and go to state 45
    OPERATOR_AND  shift, and go to state 46
    OPERATOR_OR   shift, and go to state 47
    '<'           shift, and go to state 48
    '>'           shift, and go to state 49
    '+'           shift, and go to state 50
    '-'           shift, and go to state 51
    '*'           shift, and go to state 52
    '/'           shift, and go to state 53
    ')'           shift, and go to state 60


state 39

   32 EXPRESSION: '&' IDENTIFIER .

    $default  reduce using rule 32 (EXPRESSION)


state 40

   31 EXPRESSION: IDENTIFIER '[' . EXPRESSION ']'

    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 20
    LIT_FALSE      shift, and go to state 21
    LIT_TRUE       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    '*'            shift, and go to state 26
    '('            shift, and go to state 27
    '&'            shift, and go to state 28

    IDENTIFIER  go to state 29
    LITERAL     go to state 30
    EXPRESSION  go to state 61


state 41

   40 EXPRESSION: IDENTIFIER '(' . ARGUMENTS_CALL ')'

    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 20
    LIT_FALSE      shift, and go to state 21
    LIT_TRUE       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    '*'            shift, and go to state 26
    '('            shift, and go to state 27
    '&'            shift, and go to state 28

    $default  reduce using rule 29 (ARGUMENTS_CALL)

    IDENTIFIER      go to state 29
    LITERAL         go to state 30
    ARGUMENTS_CALL  go to state 62
    EXPRESSION      go to state 63


state 42

   43 EXPRESSION: EXPRESSION OPERATOR_LE . EXPRESSION

    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 20
    LIT_FALSE      shift, and go to state 21
    LIT_TRUE       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    '*'            shift, and go to state 26
    '('            shift, and go to state 27
    '&'            shift, and go to state 28

    IDENTIFIER  go to state 29
    LITERAL     go to state 30
    EXPRESSION  go to state 64


state 43

   44 EXPRESSION: EXPRESSION OPERATOR_GE . EXPRESSION

    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 20
    LIT_FALSE      shift, and go to state 21
    LIT_TRUE       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    '*'            shift, and go to state 26
    '('            shift, and go to state 27
    '&'            shift, and go to state 28

    IDENTIFIER  go to state 29
    LITERAL     go to state 30
    EXPRESSION  go to state 65


state 44

   45 EXPRESSION: EXPRESSION OPERATOR_EQ . EXPRESSION

    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 20
    LIT_FALSE      shift, and go to state 21
    LIT_TRUE       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    '*'            shift, and go to state 26
    '('            shift, and go to state 27
    '&'            shift, and go to state 28

    IDENTIFIER  go to state 29
    LITERAL     go to state 30
    EXPRESSION  go to state 66


state 45

   46 EXPRESSION: EXPRESSION OPERATOR_NE . EXPRESSION

    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 20
    LIT_FALSE      shift, and go to state 21
    LIT_TRUE       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    '*'            shift, and go to state 26
    '('            shift, and go to state 27
    '&'            shift, and go to state 28

    IDENTIFIER  go to state 29
    LITERAL     go to state 30
    EXPRESSION  go to state 67


state 46

   42 EXPRESSION: EXPRESSION OPERATOR_AND . EXPRESSION
